Use relative URLs

--- a/about.html
+++ b/about.html
@@ -69,10 +69,10 @@ you want the image to appear in your destination document. -->
 <div id="layer1" style="position:absolute; width:301px; height:23px; z-index:3; left: 296px; top: 58px; visibility: visible;">
 <table width="100%" height="29" border="0" align="center" cellpadding="10" cellspacing="0">
 <tr>
-<td width="25%"><a href="http://www.cameratasingers.org/concerts.html" onMouseOver="MM_swapImage('Image3','','images/button-concerts-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-concerts-black1.gif" name="Image3" width="65" height="13" border="0" id="Image3"></a></td>
-<td width="25%"><a href="http://www.cameratasingers.org/venues.html" onMouseOver="MM_swapImage('Image4','','images/button-venues-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-venues-black1.gif" name="Image4" width="65" height="13" border="0" id="Image4"></a></td>
-<td width="25%"><div align="left"><a href="http://www.cameratasingers.org/rep.html" onMouseOver="MM_swapImage('Image5','','images/button-repertoire-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-repertoire-black1.gif" name="Image5" width="65" height="13" border="0" id="Image5"></a></div></td>
-<td width="25%"><a href="http://www.cameratasingers.org/contact.html" onMouseOver="MM_swapImage('Image7','','images/button-contact-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-contact-black1.gif" name="Image7" width="65" height="13" border="0" id="Image7"></a></td>
+<td width="25%"><a href="concerts.html" onMouseOver="MM_swapImage('Image3','','images/button-concerts-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-concerts-black1.gif" name="Image3" width="65" height="13" border="0" id="Image3"></a></td>
+<td width="25%"><a href="venues.html" onMouseOver="MM_swapImage('Image4','','images/button-venues-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-venues-black1.gif" name="Image4" width="65" height="13" border="0" id="Image4"></a></td>
+<td width="25%"><div align="left"><a href="rep.html" onMouseOver="MM_swapImage('Image5','','images/button-repertoire-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-repertoire-black1.gif" name="Image5" width="65" height="13" border="0" id="Image5"></a></div></td>
+<td width="25%"><a href="contact.html" onMouseOver="MM_swapImage('Image7','','images/button-contact-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-contact-black1.gif" name="Image7" width="65" height="13" border="0" id="Image7"></a></td>
 </tr>
 </table>
 </div>
@@ -87,7 +87,7 @@ you want the image to appear in your destination document. -->
 <tr>
 <td width="2%">&nbsp;</td>
 <td width="54%"><div align="center">
-<a target=_blank href="http://www.cameratasingers.org/images/photo-Julia-Davids-large.jpg"><img border="none" src="images/photo-Julia-Davids-small.jpg" width="236" height="170"></div></td>
+<a target=_blank href="images/photo-Julia-Davids-large.jpg"><img border="none" src="images/photo-Julia-Davids-small.jpg" width="236" height="170"></div></td>
 <td width="42%" class="style1"><font size="2" face="Arial, Helvetica, sans-serif"><strong>Dr. Julia Davids</strong> served as Music Director/Conductor of the Camerata Singers of Lake Forest for our final four seasons. Originally from London, Ontario, she is a product of the Amabile Youth Singers, the Ontario Youth Choir and the National Youth Choir systems. In 1998, she was named the first Apprentice Conductor of the National Youth</font></td>
 <td width="2%">&nbsp;</td>
 </tr>
@@ -103,7 +103,7 @@ class="style1"><font size="2" face="Arial, Helvetica, sans-serif"> Choir. Julia 
 Canadian Chamber Choir</a>. She recently joined Loyola University in Chicago as a voice instructor.  She is living in Skokie with her husband, Martin Davids, a Baroque violinist and Director of the <a href="http://www.calplayers.org">Callipygian Players.</a>  Julia and Marty had their first child, Judith Lynn, in March 2007, and their second child, Solomon Daniel, in April 2009.
 </td>
 <td width="42%"><div align="center">
-<a target=_blank href="http://www.cameratasingers.org/images/photo-Julia-Davids-large3.jpg"><img border="none" src="images/photo-Julia-Davids-small3.jpg" width="150" height="216"></div></td>
+<a target=_blank href="images/photo-Julia-Davids-large3.jpg"><img border="none" src="images/photo-Julia-Davids-small3.jpg" width="150" height="216"></div></td>
 <td width="2%">&nbsp;</td>
 </tr>
 <tr>
@@ -148,7 +148,7 @@ Canadian Chamber Choir</a>. She recently joined Loyola University in Chicago as 
 <td width="261" colspan="3"><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><strong>Jo Ann and Bill Avellone</strong> have been enthusiastic supporters of Camerata since their first concert nine years ago. Jo Ann is a vice president on the board of Camerata.  Jo Ann has also directed plays and led children's drama programs at Gorton, Lake Bluff and Grace Methodist Church of  Lake Bluff where she enjoys singing in the </font></div></td>
 <td width="9">&nbsp;</td>
 <td width="162"><div align="center">
-<a target=_blank href="http://www.cameratasingers.org/images/photo-avellone-large.jpg"><img border="none" src="images/photo-avellone-small.gif" width="145" height="100"></a></div></td>
+<a target=_blank href="images/photo-avellone-large.jpg"><img border="none" src="images/photo-avellone-small.gif" width="145" height="100"></a></div></td>
 <td width="9">&nbsp;</td>
 </tr>
 <tr>
@@ -168,7 +168,7 @@ Canadian Chamber Choir</a>. She recently joined Loyola University in Chicago as 
 <tr>
 <td width="9">&nbsp;</td>
 <td width="162"><div align="center">
-<a target=_blank href="http://www.cameratasingers.org/images/photo-bode-large.jpg"><img border="none" src="images/photo-bode-small.jpg" width="145" height="145"></a></div></td>
+<a target=_blank href="images/photo-bode-large.jpg"><img border="none" src="images/photo-bode-small.jpg" width="145" height="145"></a></div></td>
 <td width="9">&nbsp;</td>
 <td width="261" colspan="3"><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><strong> Hank and Susan Cartland Bode </strong> have been strong supporters of Camerata for a number of years. Susan is one of the co-founders of Camerata, serving as its first Executive Director and as a singer for 7 years. Susan was elected the first Life Board Member of Camerata. Hank and Susan sponsored the April 2005 concert in honor of Camerata's 25th anniversary.  Susan currently serves on the</font></div></td>
 <td width="9">&nbsp;</td>
@@ -193,7 +193,7 @@ Canadian Chamber Choir</a>. She recently joined Loyola University in Chicago as 
 <td width="261" colspan="3"><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><strong> Roger and Michele Burgis </strong> have proudly sponsored Camerata concerts in each of the past three years. They have a life long love of music and a tradition of supporting the arts. Roger is a Senior Vice President -Investments with Smith Barney having spent 30 years as an investment professional. Roger is a board member with Ars Viva and active in the Lake Forest</font></div></td>
 <td width="9">&nbsp;</td>
 <td width="162"><div align="center">
-<a target=_blank href="http://www.cameratasingers.org/images/photo-burgis-large.jpg">
+<a target=_blank href="images/photo-burgis-large.jpg">
 <img border="none" src="images/photo-burgis-small.jpg" width="145" height="117"></a></div></td>
 <td width="9">&nbsp;</td>
 </tr>
@@ -214,7 +214,7 @@ Canadian Chamber Choir</a>. She recently joined Loyola University in Chicago as 
 <tr>
 <td width="9">&nbsp;</td>
 <td width="162"><div align="center">
-<a target=_blank href="http://www.cameratasingers.org/images/photo-coven-large.jpg">
+<a target=_blank href="images/photo-coven-large.jpg">
 <img border="none" src="images/photo-coven-small.jpg" width="145" height="183"></a></div></td>
 <td width="9">&nbsp;</td>
 <td width="261" colspan="3"><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><strong> Ludmilla Coven </strong> has been a Camerata concert goer for more than ten years and was very much moved by the kind gesture of John Washburn who sponsored a concert honoring Ludmilla's late husband, Harry Coven.  Ludmilla brought 43 guests to the concert and asked to be a concert sponsor for the 2005/2006 season.  She sponsorer the November 2005 concert, "Due North", which highlighted Canadian music and Canadian composers. </font></div></td>
@@ -234,7 +234,7 @@ Canadian Chamber Choir</a>. She recently joined Loyola University in Chicago as 
 <td width="261" colspan="3"><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><strong>Dick and Marilyn Holmes </strong>have been actively involved with Camerata for more than 20 years. Marilyn has just returned as Executive Vice President of the Board of Directors of Camerata and Dick is serving as President after many years serving as Vice President-Treasurer.  Dick is also a singer in the tenor section. Marilyn is a life </font></div></td>
 <td width="9">&nbsp;</td>
 <td width="162"><div align="center">
-<a target=_blank href="http://www.cameratasingers.org/images/photo-holmes-large.jpg"><img border="none" src="images/photo-holmes-small.jpg" width="145" height="100"></a></div></td>
+<a target=_blank href="images/photo-holmes-large.jpg"><img border="none" src="images/photo-holmes-small.jpg" width="145" height="100"></a></div></td>
 <td width="9">&nbsp;</td>
 </tr>
 <tr>
@@ -254,10 +254,10 @@ Canadian Chamber Choir</a>. She recently joined Loyola University in Chicago as 
 <tr>
 <td width="9">&nbsp;</td>
 <td width="162"><div align="center">
-<a target=_blank href="http://www.cameratasingers.org/images/photo-looby-large.jpg">
+<a target=_blank href="images/photo-looby-large.jpg">
 <img border="none" src="images/photo-looby-small.jpg" width="165" height="150"></a></div></td>
 <td width="9">&nbsp;</td>
-<td width="261" colspan="3"><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><strong> 
+<td width="261" colspan="3"><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><strong>
 Mike and Judi Looby </strong> are the sponsors for the June 2007 concert.   Mike’s company, Diversified Graphics, has been the provider of our Camerata program brochure for the past twenty years and has also been a consistent advertiser in the brochure.  Mike is sponsoring the concert in honor of his twentieth anniversary of doing business with Camerata and also as a tribute to Mike’s father, John A. Looby, Jr., who was a regular Camerata concert-</font></div></td>
 <td width="9">&nbsp;</td>
 </tr>
@@ -282,7 +282,7 @@ goer for more than 10 years, and was attending concerts even after attaining the
 <td width="261" colspan="3"><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><strong> Stacey Magnusson</strong> is the widow of Paul Magnusson who was an integral part of the Camerata Singers for 25 years.  An outstanding tenor, Paul appeared in 91 Camerata concerts during that period and was often a featured soloist.  Stacey first met Paul while she was a student and he was a teacher at Maine West High School.  Later, as an adult, she met him, fell in love and they were married.  Stacey is director of choral activities at Algonquin Middle School in Des Plaines. She is past-President and </font></div></td>
 <td width="9">&nbsp;</td>
 <td width="162"><div align="center">
-<a target=_blank href="http://www.cameratasingers.org/images/photo-stacey-large.jpg">
+<a target=_blank href="images/photo-stacey-large.jpg">
 <img border="none" src="images/photo-stacey2-small.jpg" width="150" height="163"></a></div></td>
 <td width="9">&nbsp;</td>
 </tr>
@@ -303,7 +303,7 @@ goer for more than 10 years, and was attending concerts even after attaining the
 <tr>
 <td width="9">&nbsp;</td>
 <td width="162"><div align="center">
-<a target=_blank href="http://www.cameratasingers.org/images/photo-washburn-large.jpg">
+<a target=_blank href="images/photo-washburn-large.jpg">
 <img border="none" src="images/photo-washburn-small.jpg" width="145" height="109"></a></div></td>
 <td width="9">&nbsp;</td>
 <td width="261" colspan="3"><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><strong> John Washburn </strong> dedicated the June 2005 concert as a tribute to Harry Coven, long-time friend, former law partner and lifelong music lover, who passed away last December. Harry and his wife, Ludmilla, have been supporters of Camerata for many years. John has been a singer with Camerata in the bass section since 1988.  John joined the Board of Directors in </font></div></td>
@@ -709,7 +709,7 @@ Camerata is pleased to present the advertisers in our 2007/2008 program brochure
 </tr>
 <tr>
 <td width="50%" height="229"><div align="center">
-<a target=_blank href="http://www.cameratasingers.org/images/photo-Janet-Eckhardt-large.jpg"><img border="none" src="images/photo-Janet-Eckhardt-small.jpg" width="200" height="217"></div></td>
+<a target=_blank href="images/photo-Janet-Eckhardt-large.jpg"><img border="none" src="images/photo-Janet-Eckhardt-small.jpg" width="200" height="217"></div></td>
 <td width="50%"><p><font size="2" face="Arial, Helvetica, sans-serif"><strong>Janet Eckhardt</strong>
 was the pianist for the Camerata Singers for our final 16 seasons. She joined the group in 1991.  She is a graduate of North Park College and of the Hartt School of Music, University of Hartford.  Janet has taught piano at Seattle Pacific University and is currently on the music faculty of North Park University. She accompanies extensively throughout the Chicago area.  She is staff accompanist at Loyola University and at Moody Bible Institute.</font></p></td>
 </tr>
@@ -721,7 +721,7 @@ was the pianist for the Camerata Singers for our final 16 seasons. She joined th
 <table width="100%" border="0" cellspacing="0" cellpadding="10">
 <tr>
 <td height="260"><div align="center">
-<a target=_blank href="http://www.cameratasingers.org/images/photo-Camerata-2004L.jpg"><img border="none" src="images/photo-Camerata-2004.jpg" width="342" height="146"></a></div></td>
+<a target=_blank href="images/photo-Camerata-2004L.jpg"><img border="none" src="images/photo-Camerata-2004.jpg" width="342" height="146"></a></div></td>
 </tr>
 <tr>
 <td height="38"><div align="center"><strong><font size="3" face="Arial, Helvetica, sans-serif">About Camerata</font></strong></div></td>
@@ -1023,17 +1023,17 @@ Life Board Member</font></div></td>
 <td height="32"><div align="center"><a href="javascript:;" onMouseOver="MM_showHideLayers('lavlayer1','','hide','boardlav','','hide','singerslav','','hide','sponsorslav','','hide','advlav','','show','layer1','','show','director','','hide','janetlayerp','','hide','janetlayerw','','hide','about2','','hide','board','','hide','sponsors','','hide','advertisers','','show','singers','','hide');MM_swapImage('AdvertisersMenu','','images/button-advertisers-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-advertisers-black1.gif" name="AdvertisersMenu" width="65" height="13" border="0" id="AdvertisersMenu"></a></div></td>
 </tr>
 <tr>
-<td height="32"><div align="center"><a href="http://www.cameratasingers.org/tickets.html" onMouseover="MM_showHideLayers('lavlayer1','','show','boardlav','','hide','singerslav','','hide','sponsorslav','','hide','advlav','','hide','layer1','','show','director','','hide','janetlayerp','','hide','janetlayerw','','hide','about2','','show','board','','hide','sponsors','','hide','advertisers','','hide','singers','','hide');MM_swapImage('TicketsMenu','','images/button-tickets-blue.gif',1)" onMouseout="MM_swapImgRestore()"><img src="images/button-tickets-black1.gif" name="TicketsMenu"  width="65" height="13" border="0" id="TicketsMenu"></a></div></td>
+<td height="32"><div align="center"><a href="tickets.html" onMouseover="MM_showHideLayers('lavlayer1','','show','boardlav','','hide','singerslav','','hide','sponsorslav','','hide','advlav','','hide','layer1','','show','director','','hide','janetlayerp','','hide','janetlayerw','','hide','about2','','show','board','','hide','sponsors','','hide','advertisers','','hide','singers','','hide');MM_swapImage('TicketsMenu','','images/button-tickets-blue.gif',1)" onMouseout="MM_swapImgRestore()"><img src="images/button-tickets-black1.gif" name="TicketsMenu"  width="65" height="13" border="0" id="TicketsMenu"></a></div></td>
 </tr>
 <tr>
 <td height="32"><div align="center"><a target=_blank
 href="http://www.choralcds.org/camerata.htm" onMouseOver="MM_showHideLayers('lavlayer1','','show','boardlav','','hide','singerslav','','hide','sponsorslav','','hide','advlav','','hide','layer1','','show','director','','hide','janetlayerp','','hide','janetlayerw','','hide','about2','','show','board','','hide','sponsors','','hide','advertisers','','hide','singers','','hide');MM_swapImage('PurchaseMenu','','images/button-purchase-cds-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-purchase-cds-black1.gif" name="PurchaseMenu" width="65" height="13" border="0" id="PurchaseMenu"></a></div></td>
 </tr>
 <tr>
-<td height="32"><div align="center"><a href="http://www.cameratasingers.org/site-map.html" onMouseOver="MM_showHideLayers('lavlayer1','','show','boardlav','','hide','singerslav','','hide','sponsorslav','','hide','advlav','','hide','layer1','','show','director','','hide','janetlayerp','','hide','janetlayerw','','hide','about2','','show','board','','hide','sponsors','','hide','advertisers','','hide','singers','','hide');MM_swapImage('SiteMapMenu','','images/button-sitemap-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-sitemap-black1.gif" name="SiteMapMenu" width="65" height="13" border="0" id="SiteMapMenu"></a></div></td>
+<td height="32"><div align="center"><a href="site-map.html" onMouseOver="MM_showHideLayers('lavlayer1','','show','boardlav','','hide','singerslav','','hide','sponsorslav','','hide','advlav','','hide','layer1','','show','director','','hide','janetlayerp','','hide','janetlayerw','','hide','about2','','show','board','','hide','sponsors','','hide','advertisers','','hide','singers','','hide');MM_swapImage('SiteMapMenu','','images/button-sitemap-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-sitemap-black1.gif" name="SiteMapMenu" width="65" height="13" border="0" id="SiteMapMenu"></a></div></td>
 </tr>
 <tr>
-<td height="32"><div align="center"><a href="http://www.cameratasingers.org" onMouseOver="MM_showHideLayers('lavlayer1','','show','boardlav','','hide','singerslav','','hide','sponsorslav','','hide','advlav','','hide','layer1','','show','director','','hide','janetlayerp','','hide','janetlayerw','','hide','about2','','show','board','','hide','sponsors','','hide','advertisers','','hide','singers','','hide');MM_swapImage('HomeMenu','','images/button-home-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-home-black1.gif" name="HomeMenu" width="65" height="13" border="0" id="HomeMenu"></a></div></td>
+<td height="32"><div align="center"><a href="" onMouseOver="MM_showHideLayers('lavlayer1','','show','boardlav','','hide','singerslav','','hide','sponsorslav','','hide','advlav','','hide','layer1','','show','director','','hide','janetlayerp','','hide','janetlayerw','','hide','about2','','show','board','','hide','sponsors','','hide','advertisers','','hide','singers','','hide');MM_swapImage('HomeMenu','','images/button-home-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-home-black1.gif" name="HomeMenu" width="65" height="13" border="0" id="HomeMenu"></a></div></td>
 </tr>
 </table>
 <p><img src="images/ts_single_pixel.gif" width="1" height="1"></p></td>
