--- a/postinfo.html
+++ b/postinfo.html
@@ -9,7 +9,7 @@ content="text/html; charset=iso-8859-1">
 
 <body>
 <!-- postinfo.html version 0.100>
-<!-- 
+<!--
 	This file allows users to post files to their web with the Web Publishing Wizard or FrontPad, using the same username and password they would
 	use if they were authoring with the FrontPage Explorer and Editor.
 
@@ -18,8 +18,8 @@ content="text/html; charset=iso-8859-1">
 	you do, the parameters are as follows:
 
 	'BaseURL' is the URL for your web server.
-	
-	'DefaultPage' is the name of the default (home) page name 
+
+	'DefaultPage' is the name of the default (home) page name
 	for your web.
 
 	'XferType' specifies that the FrontPage server extensions have been
@@ -31,9 +31,9 @@ content="text/html; charset=iso-8859-1">
 
 	'version' identifies the version of the format of this file, and
 	should not be changed.
---><!-- WebPost 
+--><!-- WebPost
     version="0.100"
-    BaseUrl="http://www.cameratasingers.org"
+    BaseUrl="http://cameratasingers.github.io"
     XferType="FrontPage"
     DefaultPage="index.html"
     FPShtmlScriptUrl="_vti_bin/shtml.exe/_vti_rpc"
