--- a/public.html
+++ b/public.html
@@ -98,7 +98,7 @@ you want the image to appear in your destination document. -->
 <td width="252" colspan="3"><div align="left"><font size="2" face="Arial, Helvetica, sans-serif">
 The <a href="http://www.chslf.org/index.html">Church of the Holy Spirit </a>(Episcopal) has served as the site for four Camerata concerts, beginning in November 1981 - one of the first Camerata concerts.  In November, 1990, Camerata performed "An Afternoon with Monteverdi and Mozart".  In </font></div></td>
 <td width="9">&nbsp;</td>
-<td width="171" colspan="1" valign="top" align="center"><a target=_blank href="http://www.cameratasingers.org/images/photo-holyspiritL.gif"><img src="images/photo-holyspirit.gif" border="0" height="90" width="160"></td>
+<td width="171" colspan="1" valign="top" align="center"><a target=_blank href="images/photo-holyspiritL.gif"><img src="images/photo-holyspirit.gif" border="0" height="90" width="160"></td>
 <td width="9">&nbsp;</td>
 </tr>
 <tr>
@@ -114,7 +114,7 @@ The <a href="http://www.chslf.org/index.html">Church of the Holy Spirit </a>(Epi
 </tr>
 <tr>
 <td width="9">&nbsp;</td>
-<td width="171" colspan="1" valign="top" align="center"><a target=_blank href="http://www.cameratasingers.org/images/photo-stlukesL.jpg"><img src="images/photo-stlukes.jpg" border="0" height="106" width="160"></td>
+<td width="171" colspan="1" valign="top" align="center"><a target=_blank href="images/photo-stlukesL.jpg"><img src="images/photo-stlukes.jpg" border="0" height="106" width="160"></td>
 <td width="9">&nbsp;</td>
 <td width="252" colspan="3"><div align="left"><font size="2" face="Arial, Helvetica, sans-serif">
 Construction on the <a href="http://www.stlukesevanston.org">St. Luke's Episcopal Church</a> in Evanston began in 1906.  The architect was John Sutcliffe.  Construction was virtually completed shortly before World War I.  Camerata performed only one concert in this church (November 1984) and it was entitled "From Haydn to Britten via Brahms". </font></div></td>
@@ -144,7 +144,7 @@ Trinity International University<br>
 </tr>
 <tr>
 <td width="9">&nbsp;</td>
-<td width="171" colspan="1" valign="top" align="center"><a target=_blank href="http://www.cameratasingers.org/images/photo-olsonL.jpg"><img src="images/photo-olson.jpg" border="0" height="124" width="160"></td>
+<td width="171" colspan="1" valign="top" align="center"><a target=_blank href="images/photo-olsonL.jpg"><img src="images/photo-olson.jpg" border="0" height="124" width="160"></td>
 <td width="9">&nbsp;</td>
 <td width="252" colspan="3"><div align="left"><font size="2" face="Arial, Helvetica, sans-serif">
 <a href="http://www.tiu.edu/index.html">Trinity International University</a> is associated with the Evangelical Free Church of America.  Camerata performed only one concert at this facility (March, 1993) in conjunction with the Westminster Chamber Orchestra.  The combined concert was included in Camerata's season subscription package.</font></div></td>
@@ -162,7 +162,7 @@ Techny Towers<br>2001 Waukegan Road, Techny
 <td width="252" colspan="3"><div align="left"><font size="2" face="Arial, Helvetica, sans-serif">
 The Church of the Holy Spirit (Catholic) is the principal building in the <a href="http://www.technytowers.org/index.htm">Techny Towers</a> complex which, although being managed by the Catholic Church, has become increasingly ecumencial in its mission.  Camerata performed only one concert in this facility (November 1994).  It was entitled "Music for a Cathedral" and this facility was </font></div></td>
 <td width="9">&nbsp;</td>
-<td width="171" colspan="1" valign="top" align="center"><a target=_blank href="http://www.cameratasingers.org/images/photo-technyL.jpg"><img src="images/photo-techny.jpg" border="0" height="124" width="160"></td>
+<td width="171" colspan="1" valign="top" align="center"><a target=_blank href="images/photo-technyL.jpg"><img src="images/photo-techny.jpg" border="0" height="124" width="160"></td>
 <td width="9">&nbsp;</td>
 </tr>
 <tr>
@@ -178,7 +178,7 @@ The Church of the Holy Spirit (Catholic) is the principal building in the <a hre
 </tr>
 <tr>
 <td width="9">&nbsp;</td>
-<td width="171" colspan="1" valign="top" align="center"><a target=_blank href="http://www.cameratasingers.org/images/photo-unitarianL.jpg"><img src="images/photo-unitarian.jpg" border="0" height="93" width="160"></td>
+<td width="171" colspan="1" valign="top" align="center"><a target=_blank href="images/photo-unitarianL.jpg"><img src="images/photo-unitarian.jpg" border="0" height="93" width="160"></td>
 <td width="9">&nbsp;</td>
 <td width="252" colspan="3"><div align="left"><font size="2" face="Arial, Helvetica, sans-serif">
 The sanctuary of the <a href="http://www.nsuc.org/index.html">North Shore Unitarian Church</a> was completed in 1968 with Ron Dirsmith as the architect.  This church served as the site for three Camerata concerts - February, 1997 - "Songs of Praise"; April, 2002 - "Sacred Concert"; and December, 2003 - "Christmas </font></div></td>
@@ -199,7 +199,7 @@ The sanctuary of the <a href="http://www.nsuc.org/index.html">North Shore Unitar
 <td width="252" colspan="3"><div align="left"><font size="2" face="Arial, Helvetica, sans-serif">
 <a href="http://il021.urj.net">Congregation Solel</a> served as the concert site in February, 2001 when the Camerata Singers performed Ernest Bloch "Sacred Service" <em>(Avodath Hakodesh)</em>.  World famous cantor Ian Geller joined Camerata for this very moving presentation.  This presentation was part of the Camerata season subscription.</font></div></td>
 <td width="9">&nbsp;</td>
-<td width="171" colspan="1" valign="top" align="center"><a target=_blank href="http://www.cameratasingers.org/images/photo-solelL.jpg"><img src="images/photo-solel.jpg" border="0" height="112" width="160"></td>
+<td width="171" colspan="1" valign="top" align="center"><a target=_blank href="images/photo-solelL.jpg"><img src="images/photo-solel.jpg" border="0" height="112" width="160"></td>
 <td width="9">&nbsp;</td>
 </tr>
 <tr>
@@ -209,7 +209,7 @@ The sanctuary of the <a href="http://www.nsuc.org/index.html">North Shore Unitar
 </tr>
 <tr>
 <td width="9">&nbsp;</td>
-<td width="171" colspan="1" valign="top" align="center"><a target=_blank href="http://www.cameratasingers.org/images/photo-sinaiL.jpg"><img src="images/photo-sinai.jpg" border="0" height="125" width="160"></td>
+<td width="171" colspan="1" valign="top" align="center"><a target=_blank href="images/photo-sinaiL.jpg"><img src="images/photo-sinai.jpg" border="0" height="125" width="160"></td>
 <td width="9">&nbsp;</td>
 <td width="252" colspan="3"><div align="left"><font size="2" face="Arial, Helvetica, sans-serif">
 <a href="http://www.chicagosinai.org">Chicago Congregation Sinai</a> served as the site in February, 2001 for a repeat performance of the Ernest Bloch "Sacred Service" <em>(Avodath Hakodesh)</em> concert.  Cantor Ian Geller joined us again for an encore presentation of this concert.  This presentation was not part of the Camerata season subscription and was directed toward a Chicago audience.</font></div></td>
@@ -228,7 +228,7 @@ Barat College of DePaul<br>
 <td width="252" colspan="3"><div align="left"><font size="2" face="Arial, Helvetica, sans-serif">
 <a href="http://www.thebaratfoundation.org">Barat College</a> Chapel served as the site for a Camerata Singers concert in November, 1998 when Camerata performed "Soli Deo Gloria" - a concert dedicated to the sacred music of Johann Sebastian Bach.  A small chamber ensember consisting of members of <a target=_blank href="http://www.arsviva.org">Ars Viva</a> joined us for this wonderful afternoon of music, which included a </font></div></td>
 <td width="9">&nbsp;</td>
-<td width="171" colspan="1" valign="top" align="center"><a target=_blank href="http://www.cameratasingers.org/images/photo-baratL.jpg"><img src="images/photo-barat.jpg" border="0" height="120" width="160"></td>
+<td width="171" colspan="1" valign="top" align="center"><a target=_blank href="images/photo-baratL.jpg"><img src="images/photo-barat.jpg" border="0" height="120" width="160"></td>
 <td width="9">&nbsp;</td>
 </tr>
 <tr>
@@ -245,7 +245,7 @@ seldom heard Bach motet for double choir "Singet dem herrn ein neues Lied".  Bar
 </tr>
 <tr>
 <td width="9">&nbsp;</td>
-<td width="171" colspan="1" valign="top" align="center"><a target=_blank href="http://www.cameratasingers.org/images/photo-stjamesL.gif"><img src="images/photo-stjames.gif" border="0" height="112" width="159"></td>
+<td width="171" colspan="1" valign="top" align="center"><a target=_blank href="images/photo-stjamesL.gif"><img src="images/photo-stjames.gif" border="0" height="112" width="159"></td>
 <td width="9">&nbsp;</td>
 <td width="252" colspan="3"><div align="left"><font size="2" face="Arial, Helvetica, sans-serif">
 <a href="http://www.stjameslutheran.org">Saint James Lutheran Church</a> has served as the site for one Camerata Singers concert (February, 2002).  Entitled "Music of the Spirit", the concert featured "Psalms" by Lukas Foss.  Pianist Celeste Rue joined our regular pianist, Janet Eckhardt, to provide the 4-hands accompaniment.</font></div></td>
@@ -262,7 +262,7 @@ seldom heard Bach motet for double choir "Singet dem herrn ein neues Lied".  Bar
 <td width="252" colspan="3"><div align="left"><font size="2" face="Arial, Helvetica, sans-serif">
 The <a href="http://www.gortoncenter.org">Gorton Community Center</a> has served as the site for two Camerata Singers concerts.  In June, 1986 Camerata presented "Camerata Pops" and in February, 1987 Camerata presented "Music in the Time of Camerata" which featured "Historia di Jephte" by Carissimi. </font></div></td>
 <td width="9">&nbsp;</td>
-<td width="171" colspan="1" valign="top" align="center"><a target=_blank href="http://www.cameratasingers.org/images/photo-gortonL.jpg"><img src="images/photo-gorton.jpg" border="0" height="96" width="160"></td>
+<td width="171" colspan="1" valign="top" align="center"><a target=_blank href="images/photo-gortonL.jpg"><img src="images/photo-gorton.jpg" border="0" height="96" width="160"></td>
 <td width="9">&nbsp;</td>
 </tr>
 <tr>
@@ -272,7 +272,7 @@ The <a href="http://www.gortoncenter.org">Gorton Community Center</a> has served
 <td height="70" width="9">&nbsp;</td>
 </tr>
 <tr>
-<td width="9">&nbsp;</td><td width="171" colspan="1" valign="top" align="center"><a target=_blank href="http://www.cameratasingers.org/images/photo-bankL.jpg"><img src="images/photo-bank.jpg" border="0" height="98" width="160"></td>
+<td width="9">&nbsp;</td><td width="171" colspan="1" valign="top" align="center"><a target=_blank href="images/photo-bankL.jpg"><img src="images/photo-bank.jpg" border="0" height="98" width="160"></td>
 <td width="9">&nbsp;</td>
 <td width="252" colspan="3"><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"> The
 <a href="http://www.ntrs.com">Northern Trust Company<a> of Lake Forest has long been a supporter of the Camerata Singers of Lake Forest.  The lobby of the downtown bank (Deerpath Road and Bank Lane) is uniquely suited for a Camerata concert.  The lobby is the size of a large living room and the interior </font></div></td>
@@ -290,9 +290,9 @@ Route 41 and Route 176, Lake Bluff</font></div></td>
 <td height="70" width="9">&nbsp;</td>
 </tr>
 <tr>
-<td width="9">&nbsp;</td><td width="171" colspan="1" valign="top" align="center"><a target=_blank href="http://www.cameratasingers.org/images/photo-Knauz-showroom.jpg"><img src="images/photo-Knauz-showroomS.jpg" border="0" height="120" width="160"></td>
+<td width="9">&nbsp;</td><td width="171" colspan="1" valign="top" align="center"><a target=_blank href="images/photo-Knauz-showroom.jpg"><img src="images/photo-Knauz-showroomS.jpg" border="0" height="120" width="160"></td>
 <td width="9">&nbsp;</td>
-<td width="252" colspan="3"><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"> 
+<td width="252" colspan="3"><div align="left"><font size="2" face="Arial, Helvetica, sans-serif">
 <a href="http://www.knauz.com">Knauz Autopark<a> of Lake Bluff has for many years been an advertiser in our program brochure.  While we were looking for an unusual venue to host a single-performance concert, we checked with William and Kim Madden about the possibility of having the concert presented in their classic car showroom.  They very graciously agreed to </font></div></td>
 <td width="9">&nbsp;</td>
 </tr>
@@ -304,7 +304,7 @@ Route 41 and Route 176, Lake Bluff</font></div></td>
 <tr>
 <td width="9">&nbsp;</td>
 <td width="252" colspan="3"><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"> The photo above shows that site setup for the concert.  Knauz Motors positioned a number of classic and vintage cars strategically around the room to add to the excitement of the event.  The acoustics were exceptionally good.  In the photo at the right, Daniel Heiman, one of the Camerata Singers, is tuning his own harpsichord which he loaned Camerata for use in the concert.</font></div></td>
-<td width="9">&nbsp;</td><td width="171" colspan="1" valign="top" align="center"><a target=_blank href="http://www.cameratasingers.org/images/photo-Knauz-harpsichord.jpg"><img src="images/photo-Knauz-harpsichordS.jpg" border="0" height="120" width="160"></td>
+<td width="9">&nbsp;</td><td width="171" colspan="1" valign="top" align="center"><a target=_blank href="images/photo-Knauz-harpsichord.jpg"><img src="images/photo-Knauz-harpsichordS.jpg" border="0" height="120" width="160"></td>
 <td width="9">&nbsp;</td>
 </tr>
 </table>
@@ -346,15 +346,15 @@ height="1"></td>
 <tr height="11">
 <td width="1" height="11"><spacer type="block" width="1" height="11"></td>
 <td width="74" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="194"><img src="images/banner-top-part2.gif" border="0" height="13" width="74"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="268"> <a href="http://www.cameratasingers.org/about.html" onMouseOver="MM_swapImage('Image2','','images/button-about-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-about-black1.gif" name="Image2" width="65" height="13" border="0" id="Image2"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="268"> <a href="about.html" onMouseOver="MM_swapImage('Image2','','images/button-about-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-about-black1.gif" name="Image2" width="65" height="13" border="0" id="Image2"></a></td>
 <td width="20" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="333"><img src="images/purple-filler-20X13.gif" border="0" height="13" width="20"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="353"> <a href="http://www.cameratasingers.org/concerts.html" onMouseOver="MM_swapImage('Image3','','images/button-concerts-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-concerts-black1.gif" name="Image3" width="65" height="13" border="0" id="Image3"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="353"> <a href="concerts.html" onMouseOver="MM_swapImage('Image3','','images/button-concerts-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-concerts-black1.gif" name="Image3" width="65" height="13" border="0" id="Image3"></a></td>
 <td width="20" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="418"><img src="images/purple-filler-20X13.gif" border="0" height="13" width="20"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="438"> <a href="http://www.cameratasingers.org/venues.html" onMouseOver="MM_swapImage('Image4','','images/button-venues-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-venues-black1.gif" name="Image4" width="65" height="13" border="0" id="Image4"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="438"> <a href="venues.html" onMouseOver="MM_swapImage('Image4','','images/button-venues-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-venues-black1.gif" name="Image4" width="65" height="13" border="0" id="Image4"></a></td>
 <td width="20" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="503"><img src="images/purple-filler-20X13.gif" border="0" height="13" width="20"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="523"> <a href="http://www.cameratasingers.org/rep.html" onMouseOver="MM_swapImage('Image5','','images/button-repertoire-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-repertoire-black1.gif" name="Image5" width="65" height="13" border="0" id="Image5"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="523"> <a href="rep.html" onMouseOver="MM_swapImage('Image5','','images/button-repertoire-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-repertoire-black1.gif" name="Image5" width="65" height="13" border="0" id="Image5"></a></td>
 <td width="20" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="588"><img src="images/purple-filler-20X13.gif" border="0" height="13" width="20"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="608"> <a href="http://www.cameratasingers.org/contact.html" onMouseOver="MM_swapImage('Image6','','images/button-contact-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-contact-black1.gif" name="Image6" width="65" height="13" border="0" id="Image6"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="608"> <a href="contact.html" onMouseOver="MM_swapImage('Image6','','images/button-contact-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-contact-black1.gif" name="Image6" width="65" height="13" border="0" id="Image6"></a></td>
 <td width="140" height="13" colspan="2" rowspan="2" valign="top" align="left" xpos="673"><img src="images/purple-filler-111X13.gif" border="0" height="13" width="108"></td>
 <td width="1" height="11"></td>
 </tr>
@@ -484,7 +484,7 @@ height="1"></td>
 <td width="47" height="13"></td>
 <td width="5" height="13"></td>
 <td width="84" height="13" colspan="2" rowspan="1" valign="top"
-align="left" xpos="110"><a href="http://www.cameratasingers.org" onMouseover="MM_showHideLayers ('about','','show','about2','','show'); MM_swapImage ('HomeMenu','','images/button-home-blue.gif',1)"
+align="left" xpos="110"><a href="/" onMouseover="MM_showHideLayers ('about','','show','about2','','show'); MM_swapImage ('HomeMenu','','images/button-home-blue.gif',1)"
 onMouseout="MM_swapImgRestore()"><img src="images/button-home-black1.gif" name="HomeMenu" width="65" height="13" border="0"
 id="HomeMenu"></a></td>
 <td width="74" height="13"></td>
