--- a/tickets.html
+++ b/tickets.html
@@ -107,15 +107,15 @@ height="1"></td>
 <tr height="11">
 <td width="1" height="11"><spacer type="block" width="1" height="11"></td>
 <td width="74" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="194"><img src="images/banner-top-part2.gif" border="0" height="13" width="74"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="268"> <a href="http://www.cameratasingers.org/about.html" onMouseOver="MM_swapImage('Image2','','images/button-about-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-about-black1.gif" name="Image2" width="65" height="13" border="0" id="Image2"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="268"> <a href="about.html" onMouseOver="MM_swapImage('Image2','','images/button-about-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-about-black1.gif" name="Image2" width="65" height="13" border="0" id="Image2"></a></td>
 <td width="20" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="333"><img src="images/purple-filler-20X13.gif" border="0" height="13" width="20"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="353"> <a href="http://www.cameratasingers.org/concerts.html" onMouseOver="MM_swapImage('Image3','','images/button-concerts-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-concerts-black1.gif" name="Image3" width="65" height="13" border="0" id="Image3"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="353"> <a href="concerts.html" onMouseOver="MM_swapImage('Image3','','images/button-concerts-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-concerts-black1.gif" name="Image3" width="65" height="13" border="0" id="Image3"></a></td>
 <td width="20" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="418"><img src="images/purple-filler-20X13.gif" border="0" height="13" width="20"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="438"> <a href="http://www.cameratasingers.org/venues.html" onMouseOver="MM_swapImage('Image4','','images/button-venues-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-venues-black1.gif" name="Image4" width="65" height="13" border="0" id="Image4"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="438"> <a href="venues.html" onMouseOver="MM_swapImage('Image4','','images/button-venues-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-venues-black1.gif" name="Image4" width="65" height="13" border="0" id="Image4"></a></td>
 <td width="20" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="503"><img src="images/purple-filler-20X13.gif" border="0" height="13" width="20"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="523"> <a href="http://www.cameratasingers.org/rep.html" onMouseOver="MM_swapImage('Image5','','images/button-repertoire-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-repertoire-black1.gif" name="Image5" width="65" height="13" border="0" id="Image5"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="523"> <a href="rep.html" onMouseOver="MM_swapImage('Image5','','images/button-repertoire-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-repertoire-black1.gif" name="Image5" width="65" height="13" border="0" id="Image5"></a></td>
 <td width="20" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="588"><img src="images/purple-filler-20X13.gif" border="0" height="13" width="20"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="608"> <a href="http://www.cameratasingers.org/contact.html" onMouseOver="MM_swapImage('Image6','','images/button-contact-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-contact-black1.gif" name="Image6" width="65" height="13" border="0" id="Image6"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="608"> <a href="contact.html" onMouseOver="MM_swapImage('Image6','','images/button-contact-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-contact-black1.gif" name="Image6" width="65" height="13" border="0" id="Image6"></a></td>
 <td width="140" height="13" colspan="2" rowspan="2" valign="top" align="left" xpos="673"><img src="images/purple-filler-111X13.gif" border="0" height="13" width="108"></td>
 <td width="1" height="11"></td>
 </tr>
@@ -179,7 +179,7 @@ height="1"></td>
 <td width="1" height="13"><spacer type="block" width="1" height="13"></td>
 <td width="109" height="13" colspan="3"></td>
 <td width="84" height="13" colspan="2" rowspan="1" valign="top"
-align="left" xpos="110"><a target=_blank href="http://www.cameratasingers.org/sub-letter-07-page1.html" onMouseover="MM_showHideLayers ('about','','show','about2','','show'); MM_swapImage ('Sub01Menu','','images/button-letter-blue.gif',1)"
+align="left" xpos="110"><a target=_blank href="sub-letter-07-page1.html" onMouseover="MM_showHideLayers ('about','','show','about2','','show'); MM_swapImage ('Sub01Menu','','images/button-letter-blue.gif',1)"
 onMouseout="MM_swapImgRestore()"><img src="images/button-letter-black1.gif" name="Sub01Menu" width="65" height="13" border="0"
 id="Sub01Menu"></a></td>
 <td width="529" height="13" colspan="11"></td>
@@ -195,7 +195,7 @@ id="Sub01Menu"></a></td>
 <td width="1" height="13"><spacer type="block" width="1" height="13"></td>
 <td width="109" height="13" colspan="3"></td>
 <td width="84" height="13" colspan="2" rowspan="1" valign="top"
-align="left" xpos="110"><a target=_blank href="http://www.cameratasingers.org/sub-letter-07-page2.html" onMouseover="MM_showHideLayers ('about','','show','about2','','show'); MM_swapImage ('Sub02Menu','','images/button-order-blue.gif',1)"
+align="left" xpos="110"><a target=_blank href="sub-letter-07-page2.html" onMouseover="MM_showHideLayers ('about','','show','about2','','show'); MM_swapImage ('Sub02Menu','','images/button-order-blue.gif',1)"
 onMouseout="MM_swapImgRestore()"><img src="images/button-order-black1.gif" name="Sub02Menu" width="65" height="13" border="0"
 id="Sub02Menu"></a></td>
 <td width="529" height="13" colspan="11"></td>
@@ -211,7 +211,7 @@ id="Sub02Menu"></a></td>
 <td width="1" height="13"><spacer type="block" width="1" height="13"></td>
 <td width="109" height="13" colspan="3"></td>
 <td width="84" height="13" colspan="2" rowspan="1" valign="top"
-align="left" xpos="110"><a href="http://www.cameratasingers.org" onMouseover="MM_showHideLayers ('about','','show','about2','','show'); MM_swapImage ('HomeMenu','','images/button-home-blue.gif',1)"
+align="left" xpos="110"><a href="/" onMouseover="MM_showHideLayers ('about','','show','about2','','show'); MM_swapImage ('HomeMenu','','images/button-home-blue.gif',1)"
 onMouseout="MM_swapImgRestore()"><img src="images/button-home-black1.gif" name="HomeMenu" width="65" height="13" border="0"
 id="HomeMenu"></a></td>
 <td width="529" height="13" colspan="11"></td>
