--- a/venues.html
+++ b/venues.html
@@ -176,13 +176,13 @@ you want the image to appear in your destination document. -->
 <td width="1" height="11"><spacer type="block" width="1" height="11"></td>
 <td width="74" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="194"><img src="images/banner-top-part2.gif" border="0" height="13" width="74"></td>
 <td width="38" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="268"><img src="images/purple-filler-38X13.gif" border="0" height="13" width="38"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="306"> <a href="http://www.cameratasingers.org/about.html" onMouseOver="MM_swapImage('Image2','','images/button-about-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-about-black1.gif" name="Image2" width="65" height="13" border="0" id="Image2"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="306"> <a href="about.html" onMouseOver="MM_swapImage('Image2','','images/button-about-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-about-black1.gif" name="Image2" width="65" height="13" border="0" id="Image2"></a></td>
 <td width="22" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="371"><img src="images/purple-filler-22X13.gif" border="0" height="13" width="22"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="393"> <a href="http://www.cameratasingers.org/concerts.html" onMouseOver="MM_swapImage('Image3','','images/button-concerts-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-concerts-black1.gif" name="Image3" width="65" height="13" border="0" id="Image3"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="393"> <a href="concerts.html" onMouseOver="MM_swapImage('Image3','','images/button-concerts-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-concerts-black1.gif" name="Image3" width="65" height="13" border="0" id="Image3"></a></td>
 <td width="22" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="458"><img src="images/purple-filler-22X13.gif" border="0" height="13" width="22"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="480"> <a href="http://www.cameratasingers.org/rep.html" onMouseOver="MM_swapImage('Image4','','images/button-repertoire-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-repertoire-black1.gif" name="Image4" width="65" height="13" border="0" id="Image4"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="480"> <a href="rep.html" onMouseOver="MM_swapImage('Image4','','images/button-repertoire-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-repertoire-black1.gif" name="Image4" width="65" height="13" border="0" id="Image4"></a></td>
 <td width="22" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="545"><img src="images/purple-filler-22X13.gif" border="0" height="13" width="22"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="567"> <a href="http://www.cameratasingers.org/contact.html" onMouseOver="MM_swapImage('Image5','','images/button-contact-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-contact-black1.gif" name="Image5" width="65" height="13" border="0" id="Image5"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="567"> <a href="contact.html" onMouseOver="MM_swapImage('Image5','','images/button-contact-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-contact-black1.gif" name="Image5" width="65" height="13" border="0" id="Image5"></a></td>
 <td width="38" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="632"><img src="images/purple-filler-38X13.gif" border="0" height="13" width="38"></td>
 <td width="143" height="13" colspan="2" rowspan="2" valign="top" align="left" xpos="670"><img src="images/purple-filler-111X13.gif" border="0" height="13" width="111"></td>
 <td width="1" height="11"></td>
@@ -313,7 +313,7 @@ you want the image to appear in your destination document. -->
 <td width="47" height="13"></td>
 <td width="5" height="13"></td>
 <td width="84" height="13" colspan="2" rowspan="1" valign="top"
-align="left" xpos="110"><a target=_blank href="http://www.cameratasingers.org/estates.html" onMouseover="MM_showHideLayers ('about','','show','about2','','show'); MM_swapImage ('EstatesMenu','','images/button-olderhomes-blue.gif',1)"
+align="left" xpos="110"><a target=_blank href="estates.html" onMouseover="MM_showHideLayers ('about','','show','about2','','show'); MM_swapImage ('EstatesMenu','','images/button-olderhomes-blue.gif',1)"
 onMouseout="MM_swapImgRestore()"><img src="images/button-olderhomes-black1.gif" name="EstatesMenu" width="65" height="13" border="0"
 id="EstatesMenu"></a></td>
 <td width="74" height="13"></td>
@@ -355,7 +355,7 @@ id="EstatesMenu"></a></td>
 <td width="47" height="13"></td>
 <td width="5" height="13"></td>
 <td width="84" height="13" colspan="2" rowspan="1" valign="top"
-align="left" xpos="110"><a target=_blank href="http://www.cameratasingers.org/public.html" onMouseover="MM_showHideLayers ('about','','show','about2','','show'); MM_swapImage ('PublicMenu','','images/button-other-blue.gif',1)"
+align="left" xpos="110"><a target=_blank href="public.html" onMouseover="MM_showHideLayers ('about','','show','about2','','show'); MM_swapImage ('PublicMenu','','images/button-other-blue.gif',1)"
 onMouseout="MM_swapImgRestore()"><img src="images/button-other-black1.gif" name="PublicMenu" width="65" height="13" border="0"
 id="PublicMenu"></a></td>
 <td width="74" height="13"></td>
@@ -397,7 +397,7 @@ id="PublicMenu"></a></td>
 <td width="47" height="13"></td>
 <td width="5" height="13"></td>
 <td width="84" height="13" colspan="2" rowspan="1" valign="top"
-align="left" xpos="110"><a href="http://www.cameratasingers.org/site-map.html" onMouseover="MM_showHideLayers ('about','','show','about2','','show'); MM_swapImage ('SiteMapMenu','','images/button-sitemap-blue.gif',1)"
+align="left" xpos="110"><a href="site-map.html" onMouseover="MM_showHideLayers ('about','','show','about2','','show'); MM_swapImage ('SiteMapMenu','','images/button-sitemap-blue.gif',1)"
 onMouseout="MM_swapImgRestore()"><img src="images/button-sitemap-black1.gif" name="SiteMapMenu" width="65" height="13" border="0"
 id="SiteMapMenu"></a></td>
 <td width="74" height="13"></td>
@@ -439,7 +439,7 @@ id="SiteMapMenu"></a></td>
 <td width="47" height="13"></td>
 <td width="5" height="13"></td>
 <td width="84" height="13" colspan="2" rowspan="1" valign="top"
-align="left" xpos="110"><a href="http://www.cameratasingers.org" onMouseover="MM_showHideLayers ('about','','show','about2','','show'); MM_swapImage ('HomeMenu','','images/button-home-blue.gif',1)"
+align="left" xpos="110"><a href="/" onMouseover="MM_showHideLayers ('about','','show','about2','','show'); MM_swapImage ('HomeMenu','','images/button-home-blue.gif',1)"
 onMouseout="MM_swapImgRestore()"><img src="images/button-home-black1.gif" name="HomeMenu" width="65" height="13" border="0"
 id="HomeMenu"></a></td>
 <td width="74" height="13"></td>
