--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@ you want the image to appear in your destination document. -->
 <tr height="11">
 <td width="1" height="11"><spacer type="block" width="1" height="11"></td>
 <td width="74" height="13" colspan="2" rowspan="2" valign="top" align="left" xpos="194"><img src="images/banner-top-part2.gif" border="0" height="13" width="74"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="268"> <a href="http://www.cameratasingers.org/about.html" onMouseOver="MM_swapImage('Image2','','images/button-about-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-about-black1.gif" name="Image2" width="65" height="13" border="0" id="Image2"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="268"> <a href="about.html" onMouseOver="MM_swapImage('Image2','','images/button-about-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-about-black1.gif" name="Image2" width="65" height="13" border="0" id="Image2"></a></td>
 <td width="20" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="333"><img src="images/purple-filler-20X13.gif" border="0" height="13" width="20"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="353"> <a href="http://www.cameratasingers.org/concerts.html" onMouseOver="MM_swapImage('Image3','','images/button-concerts-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-concerts-black1.gif" name="Image3" width="65" height="13" border="0" id="Image3"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="353"> <a href="concerts.html" onMouseOver="MM_swapImage('Image3','','images/button-concerts-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-concerts-black1.gif" name="Image3" width="65" height="13" border="0" id="Image3"></a></td>
 <td width="20" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="418"><img src="images/purple-filler-20X13.gif" border="0" height="13" width="20"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="438"> <a href="http://www.cameratasingers.org/venues.html" onMouseOver="MM_swapImage('Image4','','images/button-venues-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-venues-black1.gif" name="Image4" width="65" height="13" border="0" id="Image4"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="438"> <a href="venues.html" onMouseOver="MM_swapImage('Image4','','images/button-venues-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-venues-black1.gif" name="Image4" width="65" height="13" border="0" id="Image4"></a></td>
 <td width="20" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="503"><img src="images/purple-filler-20X13.gif" border="0" height="13" width="20"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="523"> <a href="http://www.cameratasingers.org/rep.html" onMouseOver="MM_swapImage('Image5','','images/button-repertoire-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-repertoire-black1.gif" name="Image5" width="65" height="13" border="0" id="Image5"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="523"> <a href="rep.html" onMouseOver="MM_swapImage('Image5','','images/button-repertoire-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-repertoire-black1.gif" name="Image5" width="65" height="13" border="0" id="Image5"></a></td>
 <td width="20" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="588"><img src="images/purple-filler-20X13.gif" border="0" height="13" width="20"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="608"> <a href="http://www.cameratasingers.org/contact.html" onMouseOver="MM_swapImage('Image6','','images/button-contact-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-contact-black1.gif" name="Image6" width="65" height="13" border="0" id="Image6"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="608"> <a href="contact.html" onMouseOver="MM_swapImage('Image6','','images/button-contact-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-contact-black1.gif" name="Image6" width="65" height="13" border="0" id="Image6"></a></td>
 <td width="140" height="13" colspan="2" rowspan="2" valign="top" align="left" xpos="673"><img src="images/purple-filler-111X13.gif" border="0" height="13" width="111"></td>
 <td width="1" height="11"></td>
 </tr>
@@ -131,7 +131,7 @@ you want the image to appear in your destination document. -->
 <tr height="6">
 <td width="1" height="6"><spacer type="block" width="1" height="6"></td>
 <td width="24" height="6"></td>
-<td width="505" height="379" colspan="11" rowspan="7" valign="top" align="left" xpos="218"><a target=_blank href="http://www.cameratasingers.org/images/photo-Camerata-2003Lx.jpg"><img src="images/photo-Camerata-2003X.jpg" border="0" height="379" width="505"></td>
+<td width="505" height="379" colspan="11" rowspan="7" valign="top" align="left" xpos="218"><a target=_blank href="images/photo-Camerata-2003Lx.jpg"><img src="images/photo-Camerata-2003X.jpg" border="0" height="379" width="505"></td>
 <td width="90" height="424" colspan="1" rowspan="8" valign="top" align="left" xpos="723"><img src="images/banner-right.gif" border="0" height="424" width="59"></td>
 <td width="1" height="6"></td>
 </tr>
@@ -168,7 +168,7 @@ you want the image to appear in your destination document. -->
 <td width="57" height="13"></td>
 <td width="47" height="13"></td>
 <td width="89" height="13" colspan="2" rowspan="1" valign="top"
-align="left" xpos="105"><a target=_blank href="http://www.cameratasingers.org/site-map.html" onMouseover="MM_showHideLayers ('about','','show','about2','','show'); MM_swapImage ('SiteMapMenu','','images/button-sitemap-blue.gif',1)"
+align="left" xpos="105"><a target=_blank href="site-map.html" onMouseover="MM_showHideLayers ('about','','show','about2','','show'); MM_swapImage ('SiteMapMenu','','images/button-sitemap-blue.gif',1)"
 onMouseout="MM_swapImgRestore()"><img src="images/button-sitemap-black1.gif" name="SiteMapMenu" width="65" height="13" border="0"
 id="SiteMapMenu"></a></td>
 <td width="24" height="13"></td>
