--- a/rep.html
+++ b/rep.html
@@ -99,7 +99,7 @@ you want the image to appear in your destination document. -->
 <td colspan="2"><div align="left"><strong><font size="3" face="Arial, Helvetica, sans-serif"><p><b>Sunday, June 12th, 2005 <br>
 <i> Showtime Through the Ages </i></b></p> </font>
 <font size="2" face="Arial, Helvetica, sans-serif">
-<p>Camerata returns to Broadway with popular show tunes through the ages.  Included will be an exciting combination of Shakespearean texts which have been written as jazz harmonies by the great George Shearing.  The concert also features selections from <i>All That Jazz, Fiddler on the Roof, Godspell</i> and other Broadway hits.  The concert concludes with selections from Lucy Simon’s <i>Secret Garden</i>.</p>  
+<p>Camerata returns to Broadway with popular show tunes through the ages.  Included will be an exciting combination of Shakespearean texts which have been written as jazz harmonies by the great George Shearing.  The concert also features selections from <i>All That Jazz, Fiddler on the Roof, Godspell</i> and other Broadway hits.  The concert concludes with selections from Lucy Simon’s <i>Secret Garden</i>.</p>
 </font></div></td>
 <td width="2%"> &nbsp; </td>
 </tr>
@@ -151,7 +151,7 @@ you want the image to appear in your destination document. -->
 <td colspan="2"><div align="left"><strong><font size="3" face="Arial, Helvetica, sans-serif"><p><b>Sunday, April 9th, 2006 <br>
 <i>Due South</i></b></p> </font>
 <font size="2" face="Arial, Helvetica, sans-serif">
-<p>As the days get longer and the sun appears, we redirect our compass ‘Due South’ for an exploration of the music of the Southern Hemisphere.  Sacred music will include Salmo 150 by Brazilian Ernani Aguiar as well as sacred harp and gospel music from the American South.  Stephen Hatfield’s African Celebration mixes English and Zulu texts in an intricate, passionate plea for unity.  From the stirring dance rhythms of Verano Porteno by Argentinean Astor Piazzolla to the laid back Jamaican Marketplace by Larry Farrow, the Camerata Singers promise you a sun filled afternoon of great music!</p>  
+<p>As the days get longer and the sun appears, we redirect our compass ‘Due South’ for an exploration of the music of the Southern Hemisphere.  Sacred music will include Salmo 150 by Brazilian Ernani Aguiar as well as sacred harp and gospel music from the American South.  Stephen Hatfield’s African Celebration mixes English and Zulu texts in an intricate, passionate plea for unity.  From the stirring dance rhythms of Verano Porteno by Argentinean Astor Piazzolla to the laid back Jamaican Marketplace by Larry Farrow, the Camerata Singers promise you a sun filled afternoon of great music!</p>
 </font></div></td>
 <td width="2%"> &nbsp; </td>
 </tr>
@@ -165,7 +165,7 @@ you want the image to appear in your destination document. -->
 <td colspan="2"><div align="left"><strong><font size="3" face="Arial, Helvetica, sans-serif"><p><b>Sunday, June 11th, 2006 <br>
 <i>A Few of Our Favorite Things!</i></b></p> </font>
 <font size="2" face="Arial, Helvetica, sans-serif">
-<p>Back by popular demand, the Camerata Singers will share some of their favorite show tunes.  You will hear exciting performances by soloists and small ensembles from within the choir.   The full chorus will sing numbers from <i>The Sound of Music, Carousel, Into the Woods, Candide</i> and so many more! <i>Anything Goes</i> when the singers get to choose ‘A Few of Our Favorite Things’!</i>.</p>  
+<p>Back by popular demand, the Camerata Singers will share some of their favorite show tunes.  You will hear exciting performances by soloists and small ensembles from within the choir.   The full chorus will sing numbers from <i>The Sound of Music, Carousel, Into the Woods, Candide</i> and so many more! <i>Anything Goes</i> when the singers get to choose ‘A Few of Our Favorite Things’!</i>.</p>
 </font></div></td>
 <td width="2%"> &nbsp; </td>
 </tr>
@@ -217,7 +217,7 @@ you want the image to appear in your destination document. -->
 <i>The Romantic Era</i></b></p> </font>
 <font size="2" face="Arial, Helvetica, sans-serif">
 <p>We will be presenting the works of Schubert, Mendelssohn, Brahms, Bruch, Bizet, Rossini, Dvorak, Elgar, Parry, and Stanford as representative of the wonderful romantic movement in music that took place in the 19th century.  This concert will be performed at the magnificent Cuneo Estate in Vernon Hills.
-</p>  
+</p>
 </font></div></td>
 <td width="2%"> &nbsp; </td>
 </tr>
@@ -231,7 +231,7 @@ you want the image to appear in your destination document. -->
 <td colspan="2"><div align="left"><strong><font size="3" face="Arial, Helvetica, sans-serif"><p><b>Sunday, June 13th, 2004 <br>
 <i>Folksong in Concert</i></b></p> </font>
 <font size="2" face="Arial, Helvetica, sans-serif">
-<p>Folk songs flourished for centuries without being written down.  We will present some of the songs there were collected/composed by Johannes Brahms and Bela Bartok.  Also included will be Aaron Copland’s <i>Old American Songs</i> and various folksongs from the British Isles. </p>  
+<p>Folk songs flourished for centuries without being written down.  We will present some of the songs there were collected/composed by Johannes Brahms and Bela Bartok.  Also included will be Aaron Copland’s <i>Old American Songs</i> and various folksongs from the British Isles. </p>
 </font></div></td>
 <td width="2%"> &nbsp; </td>
 </tr>
@@ -283,7 +283,7 @@ Music Director Julia Davids joins with her ‘love’, husband and baroque violinst 
 <td colspan="2"><div align="left"><strong><font size="3" face="Arial, Helvetica, sans-serif"><p><b>Sunday, June 10th, 2007 <br>
 <i>"Til the Fat Lady Sings!!</i></b></p> </font>
 <font size="2" face="Arial, Helvetica, sans-serif">
-<p>In great Camerata tradition, the Singers will share some of their favorite music from opera, operetta and musical theatre.  You will hear exciting performances by soloists and small ensembles from within the choir.   The full chorus will sing numbers from Purcell’s <i>King Arthur</i>, Bizet’s <i>Carmen</i>, Offenbach’s <i>La Jolie Parfumeuse</i> and Verdi’s <i>Nabucco</i> and <i>La Traviata</i>.  Enjoy the lighter side of opera with Camerata – the fun won’t be over until the proverbial Fat Lady sings!</p>  
+<p>In great Camerata tradition, the Singers will share some of their favorite music from opera, operetta and musical theatre.  You will hear exciting performances by soloists and small ensembles from within the choir.   The full chorus will sing numbers from Purcell’s <i>King Arthur</i>, Bizet’s <i>Carmen</i>, Offenbach’s <i>La Jolie Parfumeuse</i> and Verdi’s <i>Nabucco</i> and <i>La Traviata</i>.  Enjoy the lighter side of opera with Camerata – the fun won’t be over until the proverbial Fat Lady sings!</p>
 </font></div></td>
 <td width="2%"> &nbsp; </td>
 </tr>
@@ -376,13 +376,13 @@ Music Director Julia Davids joins with her ‘love’, husband and baroque violinst 
 <td width="1" height="11"><spacer type="block" width="1" height="11"></td>
 <td width="74" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="194"><img src="images/banner-top-part2.gif" border="0" height="13" width="74"></td>
 <td width="38" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="268"><img src="images/purple-filler-38X13.gif" border="0" height="13" width="38"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="306"> <a href="http://www.cameratasingers.org/about.html" onMouseOver="MM_swapImage('Image2','','images/button-about-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-about-black1.gif" name="Image2" width="65" height="13" border="0" id="Image2"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="306"> <a href="about.html" onMouseOver="MM_swapImage('Image2','','images/button-about-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-about-black1.gif" name="Image2" width="65" height="13" border="0" id="Image2"></a></td>
 <td width="22" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="371"><img src="images/purple-filler-22X13.gif" border="0" height="13" width="22"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="393"> <a href="http://www.cameratasingers.org/concerts.html" onMouseOver="MM_swapImage('Image3','','images/button-concerts-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-concerts-black1.gif" name="Image3" width="65" height="13" border="0" id="Image3"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="393"> <a href="concerts.html" onMouseOver="MM_swapImage('Image3','','images/button-concerts-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-concerts-black1.gif" name="Image3" width="65" height="13" border="0" id="Image3"></a></td>
 <td width="22" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="458"><img src="images/purple-filler-22X13.gif" border="0" height="13" width="22"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="480"> <a href="http://www.cameratasingers.org/venues.html" onMouseOver="MM_swapImage('Image4','','images/button-venues-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-venues-black1.gif" name="Image4" width="65" height="13" border="0" id="Image4"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="480"> <a href="venues.html" onMouseOver="MM_swapImage('Image4','','images/button-venues-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-venues-black1.gif" name="Image4" width="65" height="13" border="0" id="Image4"></a></td>
 <td width="22" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="545"><img src="images/purple-filler-22X13.gif" border="0" height="13" width="22"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="567"> <a href="http://www.cameratasingers.org/contact.html" onMouseOver="MM_swapImage('Image5','','images/button-contact-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-contact-black1.gif" name="Image5" width="65" height="13" border="0" id="Image5"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="567"> <a href="contact.html" onMouseOver="MM_swapImage('Image5','','images/button-contact-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-contact-black1.gif" name="Image5" width="65" height="13" border="0" id="Image5"></a></td>
 <td width="38" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="632"><img src="images/purple-filler-38X13.gif" border="0" height="13" width="38"></td>
 <td width="143" height="13" colspan="2" rowspan="2" valign="top" align="left" xpos="670"><img src="images/purple-filler-111X13.gif" border="0" height="13" width="111"></td>
 <td width="1" height="11"></td>
@@ -677,7 +677,7 @@ onMouseout="MM_swapImgRestore()"><img src="images/button-2006-black.gif" name="c
 <td width="47" height="13"></td>
 <td width="5" height="13"></td>
 <td width="84" height="13" colspan="2" rowspan="1" valign="top"
-align="left" xpos="110"><a href="http://www.cameratasingers.org/theme.html" onMouseover="MM_showHideLayers ('splash1','','show','layer1','','show','layer1conc1','','hide','concert1','','hide','layer1conc2','','hide','concert2','','hide','layer1conc3','','hide','concert3','','hide','layer1conc4','','hide','concert4','','hide'); MM_swapImage ('ThemesMenu','','images/button-themes-blue.gif',1)"
+align="left" xpos="110"><a href="theme.html" onMouseover="MM_showHideLayers ('splash1','','show','layer1','','show','layer1conc1','','hide','concert1','','hide','layer1conc2','','hide','concert2','','hide','layer1conc3','','hide','concert3','','hide','layer1conc4','','hide','concert4','','hide'); MM_swapImage ('ThemesMenu','','images/button-themes-blue.gif',1)"
 onMouseout="MM_swapImgRestore()"><img src="images/button-themes-black1.gif" name="ThemesMenu" width="65" height="13" border="0"
 id="ThemesMenu"></a></td>
 <td width="74" height="13"></td>
@@ -759,7 +759,7 @@ id="PurchaseMenu"></a></td>
 <td width="47" height="13"></td>
 <td width="5" height="13"></td>
 <td width="84" height="13" colspan="2" rowspan="1" valign="top"
-align="left" xpos="110"><a href="http://www.cameratasingers.org/site-map.html" onMouseover="MM_showHideLayers ('splash1','','show','layer1','','show','layer1conc1','','hide','concert1','','hide','layer1conc2','','hide','concert2','','hide','layer1conc3','','hide','concert3','','hide','layer1conc4','','hide','concert4','','hide'); MM_swapImage ('SiteMapMenu','','images/button-sitemap-blue.gif',1)"
+align="left" xpos="110"><a href="site-map.html" onMouseover="MM_showHideLayers ('splash1','','show','layer1','','show','layer1conc1','','hide','concert1','','hide','layer1conc2','','hide','concert2','','hide','layer1conc3','','hide','concert3','','hide','layer1conc4','','hide','concert4','','hide'); MM_swapImage ('SiteMapMenu','','images/button-sitemap-blue.gif',1)"
 onMouseout="MM_swapImgRestore()"><img src="images/button-sitemap-black1.gif" name="SiteMapMenu" width="65" height="13" border="0"
 id="SiteMapMenu"></a></td>
 <td width="74" height="13"></td>
@@ -800,7 +800,7 @@ id="SiteMapMenu"></a></td>
 <td width="47" height="13"></td>
 <td width="5" height="13"></td>
 <td width="84" height="13" colspan="2" rowspan="1" valign="top"
-align="left" xpos="110"><a href="http://www.cameratasingers.org" onMouseover="MM_showHideLayers ('splash1','','show','layer1','','show','layer1conc1','','hide','concert1','','hide','layer1conc2','','hide','concert2','','hide','layer1conc3','','hide','concert3','','hide','layer1conc4','','hide','concert4','','hide'); MM_swapImage ('HomeMenu','','images/button-home-blue.gif',1)"
+align="left" xpos="110"><a href="" onMouseover="MM_showHideLayers ('splash1','','show','layer1','','show','layer1conc1','','hide','concert1','','hide','layer1conc2','','hide','concert2','','hide','layer1conc3','','hide','concert3','','hide','layer1conc4','','hide','concert4','','hide'); MM_swapImage ('HomeMenu','','images/button-home-blue.gif',1)"
 onMouseout="MM_swapImgRestore()"><img src="images/button-home-black1.gif" name="HomeMenu" width="65" height="13" border="0"
 id="HomeMenu"></a></td>
 <td width="74" height="13"></td>
