--- a/site-map.html
+++ b/site-map.html
@@ -72,64 +72,64 @@ you want the image to appear in your destination document. -->
 <td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif">This page displays the information available in this web site and, in most cases, will allow you to go directly to any of the topics listed.  In some cases, you may have to move the cursor over a specific button after going to the new page.</font></div></td>
 </tr>
 <tr>
-<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="http://www.cameratasingers.org/about.html"><strong>Advertisers</a></strong> - A listing of advertisers in Camerata's 2007/2008 program brochure.  Links are provided (if available) to the advertiser's individual web site.  Move the cursor over the word "Advertisers" to view the page</font></div></td>
+<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="about.html"><strong>Advertisers</a></strong> - A listing of advertisers in Camerata's 2007/2008 program brochure.  Links are provided (if available) to the advertiser's individual web site.  Move the cursor over the word "Advertisers" to view the page</font></div></td>
 </tr>
 <tr>
-<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="http://www.cameratasingers.org/about.html"><strong>Board of Directors</a></strong> - Listing of the current members of the Camerata Board of Directors.  Move the cursor over the word "Board" to view the page</font></div></td>
+<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="about.html"><strong>Board of Directors</a></strong> - Listing of the current members of the Camerata Board of Directors.  Move the cursor over the word "Board" to view the page</font></div></td>
 </tr>
 <tr>
-<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="http://www.cameratasingers.org/public.html"><strong>Concert sites - Commercial/Public/Sacred buildings</a></strong> - a collection of photographs/addresses of concert sites that were originally public or commerical buildings and/or houses of worship</font></div></td>
+<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="public.html"><strong>Concert sites - Commercial/Public/Sacred buildings</a></strong> - a collection of photographs/addresses of concert sites that were originally public or commerical buildings and/or houses of worship</font></div></td>
 </tr>
 <tr>
-<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="http://www.cameratasingers.org/estates.html"><strong>Concert sites - Older Homes</a></strong> - a collection of photographs/addresses of concert sites that were originally private homes and were built at least 50 years ago.</font></div></td>
+<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="estates.html"><strong>Concert sites - Older Homes</a></strong> - a collection of photographs/addresses of concert sites that were originally private homes and were built at least 50 years ago.</font></div></td>
 </tr>
 <tr>
-<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="http://www.cameratasingers.org/theme.html"><strong>Concert Themes</a></strong> - a listing of the names of all Camerata concerts since 1980 sorted into various categories of themes.  An image of the song list for each concert is available for viewing by clicking on the name of the concert.  Many of the concerts have several one minute sound clips available.  If the concert name is preceded by one or more pair of musical notes, you can click on any set of notes to hear representative songs from that concert in .mp3 format.</font></div></td>
+<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="theme.html"><strong>Concert Themes</a></strong> - a listing of the names of all Camerata concerts since 1980 sorted into various categories of themes.  An image of the song list for each concert is available for viewing by clicking on the name of the concert.  Many of the concerts have several one minute sound clips available.  If the concert name is preceded by one or more pair of musical notes, you can click on any set of notes to hear representative songs from that concert in .mp3 format.</font></div></td>
 </tr>
 <tr>
-<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="http://www.cameratasingers.org/venues.html"><strong>Concert Venues </a></strong> - A overview of concert venues and photographs and descriptions of selected venues.</font></div></td>
+<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="venues.html"><strong>Concert Venues </a></strong> - A overview of concert venues and photographs and descriptions of selected venues.</font></div></td>
 </tr>
 <tr>
-<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="http://www.cameratasingers.org/concerts.html"><strong>Concerts - 2007/2008</a></strong> - descriptions of the four Camerata concerts scheduled for the 2007/2008 season.</font></div></td>
+<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="concerts.html"><strong>Concerts - 2007/2008</a></strong> - descriptions of the four Camerata concerts scheduled for the 2007/2008 season.</font></div></td>
 </tr>
 <tr>
-<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="http://www.cameratasingers.org/about.html"><strong>Director</a></strong> - Photograph and bio of Julia Davids, Music Director/Conductor of the Camerata Singers.  Move the cursor over the word "Director" to view the page.</font></div></td>
+<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="about.html"><strong>Director</a></strong> - Photograph and bio of Julia Davids, Music Director/Conductor of the Camerata Singers.  Move the cursor over the word "Director" to view the page.</font></div></td>
 </tr>
 <tr>
-<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="http://www.cameratasingers.org/history.html"><strong>History of Camerata</a></strong> - The history of the Camerata Singers from 1980 to the present including a listing of Board Presidents.</font></div></td>
+<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="history.html"><strong>History of Camerata</a></strong> - The history of the Camerata Singers from 1980 to the present including a listing of Board Presidents.</font></div></td>
 </tr>
 <tr>
 <td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="http://www.choralcds.org/camerata.htm"><strong>Order CDs</a></strong> - a direct link to SoundByte Studios website for ordering CDs of Camerata concerts.</font></div></td>
 </tr>
 <tr>
-<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="http://www.cameratasingers.org/photos.html"><strong>Photo Gallery</a></strong> - a collection of photographs of Camerata Singers from 1980 to current.  Names of the singers in each photo are listed under the photo.</font></div></td>
+<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="photos.html"><strong>Photo Gallery</a></strong> - a collection of photographs of Camerata Singers from 1980 to current.  Names of the singers in each photo are listed under the photo.</font></div></td>
 </tr>
 <tr>
-<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="http://www.cameratasingers.org/about.html"><strong>Pianist</a></strong> - Photograph and bio of Janet Eckhardt, pianist for the Camerata Singers.  Move the cursor over the word "Pianist" to view the page</font></div></td>
+<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="about.html"><strong>Pianist</a></strong> - Photograph and bio of Janet Eckhardt, pianist for the Camerata Singers.  Move the cursor over the word "Pianist" to view the page</font></div></td>
 </tr>
 <tr>
-<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="http://www.cameratasingers.org/concerts.html"><strong>Season schedule</a></strong> - A listing of the concerts for the 2007/2008 season with dates and brief descriptions of each concert.</font></div></td>
+<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="concerts.html"><strong>Season schedule</a></strong> - A listing of the concerts for the 2007/2008 season with dates and brief descriptions of each concert.</font></div></td>
 </tr>
 <tr>
-<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="http://www.cameratasingers.org/singers-history.html"><strong>Singers - Complete Roster</a></strong> - Alphabetic listing of every singer who has performed in at least one Camerata Singers concert.  Each singer is listed along with the number of their concerts, their first concert season and their latest concert season.</font></div></td>
+<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="singers-history.html"><strong>Singers - Complete Roster</a></strong> - Alphabetic listing of every singer who has performed in at least one Camerata Singers concert.  Each singer is listed along with the number of their concerts, their first concert season and their latest concert season.</font></div></td>
 </tr>
 <tr>
-<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="http://www.cameratasingers.org/about.html"><strong>Singers - Current Roster</a></strong> - Photographs and short bios of current Camerata Singers.  Move the cursor over the word "Singers" to view the page</font></div></td>
+<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="about.html"><strong>Singers - Current Roster</a></strong> - Photographs and short bios of current Camerata Singers.  Move the cursor over the word "Singers" to view the page</font></div></td>
 </tr>
 <tr>
-<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="http://www.cameratasingers.org/sound-clips.html"><strong>Sound Clips </a></strong> - An alphabetical index of Camerata sound clips.  The listing includes the name of the song, the name of the concert and the composer/arranger.  You can click on the name of the song and you will be able to hear the sound clip in .mp3 format.</font></div></td>
+<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="sound-clips.html"><strong>Sound Clips </a></strong> - An alphabetical index of Camerata sound clips.  The listing includes the name of the song, the name of the concert and the composer/arranger.  You can click on the name of the song and you will be able to hear the sound clip in .mp3 format.</font></div></td>
 </tr>
 <tr>
-<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="http://www.cameratasingers.org/about.html"><strong>Sponsors</a></strong> - Photographs and short bios of sponsors for the past two seasons.  Move the cursor over the word "Sponsors" to view the page</font></div></td>
+<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="about.html"><strong>Sponsors</a></strong> - Photographs and short bios of sponsors for the past two seasons.  Move the cursor over the word "Sponsors" to view the page</font></div></td>
 </tr>
 <tr>
-<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="http://www.cameratasingers.org/sub-letter-07-page1.html"><strong>Subscription letter</a></strong> - a copy of the subscription mailing for the 2007/2008 season.</font></div></td>
+<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="sub-letter-07-page1.html"><strong>Subscription letter</a></strong> - a copy of the subscription mailing for the 2007/2008 season.</font></div></td>
 </tr>
 <tr>
-<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="http://www.cameratasingers.org/sub-letter-07-page2.html"><strong>Subscription response form</a></strong> - a copy of the subscription response form to purchase tickets for the entire 2007/2008 season or for individual concerts</font></div></td>
+<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="sub-letter-07-page2.html"><strong>Subscription response form</a></strong> - a copy of the subscription response form to purchase tickets for the entire 2007/2008 season or for individual concerts</font></div></td>
 </tr>
 <tr>
-<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="http://www.cameratasingers.org/tickets.html"><strong>Tickets </a></strong> - Ticket information and prices for the current season.</font></div></td>
+<td><div align="left"><font size="2" face="Arial, Helvetica, sans-serif"><a target=_blank href="tickets.html"><strong>Tickets </a></strong> - Ticket information and prices for the current season.</font></div></td>
 </tr>
 
 </table>
@@ -175,15 +175,15 @@ height="1"></td>
 <tr height="11">
 <td width="1" height="11"><spacer type="block" width="1" height="11"></td>
 <td width="74" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="194"><img src="images/banner-top-part2.gif" border="0" height="13" width="74"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="268"> <a href="http://www.cameratasingers.org/about.html" onMouseOver="MM_swapImage('Image2','','images/button-about-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-about-black1.gif" name="Image2" width="65" height="13" border="0" id="Image2"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="268"> <a href="about.html" onMouseOver="MM_swapImage('Image2','','images/button-about-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-about-black1.gif" name="Image2" width="65" height="13" border="0" id="Image2"></a></td>
 <td width="20" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="333"><img src="images/purple-filler-20X13.gif" border="0" height="13" width="20"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="353"> <a href="http://www.cameratasingers.org/concerts.html" onMouseOver="MM_swapImage('Image3','','images/button-concerts-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-concerts-black1.gif" name="Image3" width="65" height="13" border="0" id="Image3"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="353"> <a href="concerts.html" onMouseOver="MM_swapImage('Image3','','images/button-concerts-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-concerts-black1.gif" name="Image3" width="65" height="13" border="0" id="Image3"></a></td>
 <td width="20" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="418"><img src="images/purple-filler-20X13.gif" border="0" height="13" width="20"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="438"> <a href="http://www.cameratasingers.org/venues.html" onMouseOver="MM_swapImage('Image4','','images/button-venues-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-venues-black1.gif" name="Image4" width="65" height="13" border="0" id="Image4"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="438"> <a href="venues.html" onMouseOver="MM_swapImage('Image4','','images/button-venues-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-venues-black1.gif" name="Image4" width="65" height="13" border="0" id="Image4"></a></td>
 <td width="20" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="503"><img src="images/purple-filler-20X13.gif" border="0" height="13" width="20"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="523"> <a href="http://www.cameratasingers.org/rep.html" onMouseOver="MM_swapImage('Image5','','images/button-repertoire-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-repertoire-black1.gif" name="Image5" width="65" height="13" border="0" id="Image5"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="523"> <a href="rep.html" onMouseOver="MM_swapImage('Image5','','images/button-repertoire-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-repertoire-black1.gif" name="Image5" width="65" height="13" border="0" id="Image5"></a></td>
 <td width="20" height="13" colspan="1" rowspan="2" valign="top" align="left" xpos="588"><img src="images/purple-filler-20X13.gif" border="0" height="13" width="20"></td>
-<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="608"> <a href="http://www.cameratasingers.org/contact.html" onMouseOver="MM_swapImage('Image6','','images/button-contact-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-contact-black1.gif" name="Image6" width="65" height="13" border="0" id="Image6"></a></td>
+<td width="65" height="13" colspan="1" rowspan="2" align="left" xpos="608"> <a href="contact.html" onMouseOver="MM_swapImage('Image6','','images/button-contact-blue.gif',1)" onMouseOut="MM_swapImgRestore()"><img src="images/button-contact-black1.gif" name="Image6" width="65" height="13" border="0" id="Image6"></a></td>
 <td width="140" height="13" colspan="2" rowspan="2" valign="top" align="left" xpos="673"><img src="images/purple-filler-111X13.gif" border="0" height="13" width="108"></td>
 <td width="1" height="11"></td>
 </tr>
@@ -313,7 +313,7 @@ height="1"></td>
 <td width="47" height="13"></td>
 <td width="5" height="13"></td>
 <td width="84" height="13" colspan="2" rowspan="1" valign="top"
-align="left" xpos="110"><a href="http://www.cameratasingers.org" onMouseover="MM_showHideLayers ('about','','show','about2','','show'); MM_swapImage ('HomeMenu','','images/button-home-blue.gif',1)"
+align="left" xpos="110"><a href="/" onMouseover="MM_showHideLayers ('about','','show','about2','','show'); MM_swapImage ('HomeMenu','','images/button-home-blue.gif',1)"
 onMouseout="MM_swapImgRestore()"><img src="images/button-home-black1.gif" name="HomeMenu" width="65" height="13" border="0"
 id="HomeMenu"></a></td>
 <td width="74" height="13"></td>
